# chiplet-mlir

./: CMakeLists.txt  README.md
experiment/MiniLM/model/: MiniLM.py
experiment/VIT/model/: VIT.py
experiment/demo/: 02-linalg.mlir  simple.py
include/chiplet/Conversion/: CMakeLists.txt
include/chiplet/Conversion/CirToChipletir/: CMakeLists.txt  PassDetail.h  Passes.h  Passes.td
include/chiplet/Conversion/TorchToChipletir/: CMakeLists.txt  PassDetail.h  Passes.h  Passes.td
include/chiplet/Dialect/: CMakeLists.txt
include/chiplet/Dialect/CHIPLET/: CMakeLists.txt
include/chiplet/Dialect/CHIPLET/IR/: CHIPLET.h  CHIPLETBase.td  CHIPLETOps.td  CMakeLists.txt
include/chiplet/Dialect/CHIPLET/IR/stablehlo/dialect/: AssemblyFormat.cpp  AssemblyFormat.h  Base.cpp  Base.h  BroadcastUtils.cpp  CMakeLists.txt  ChloBytecode.cpp  ChloOps.cpp  ChloOps.h  ChloOps.td  Register.cpp  Serialization.cpp  Serialization.h  StablehloAttrs.td  StablehloBytecode.cpp  StablehloOps.cpp  StablehloOps.h  StablehloOps.td  TypeInference.cpp  TypeInference.h  Version.cpp  VhloAttrs.td  VhloBytecode.cpp  VhloEnums.td  VhloOps.cpp  VhloOps.h  VhloOps.td  VhloTypes.cpp  VhloTypes.h  VhloTypes.td
include/chiplet/Dialect/CHIPLET/Lowering/: CMakeLists.txt  LowerPasses.h  LowerPasses.td
include/chiplet/Dialect/CHIPLET/Transformer/: CMakeLists.txt  Passes.h  Passes.td
lib/: CMakeLists.txt  InitAll.cpp
lib/Conversion/CirToChipletir/: CMakeLists.txt  Passes.cpp
lib/Conversion/TorchToChipletir/: CMakeLists.txt  Passes.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/CHIPLET/: CMakeLists.txt
lib/Dialect/CHIPLET/IR/: CHIPLETDialect.cpp  CHIPLETOps.cpp  CMakeLists.txt
lib/Dialect/CHIPLET/Transformer/: CMakeLists.txt  DSE.cpp
tests/: README.md  run.sh
tests/c_program/: run.sh
tests/c_program/c_cpp_code/: test.sh
tests/c_program/c_cpp_code/data/: README.md
tests/c_program/c_cpp_code/include/c/: complex.h  vector.h  watch.h
tests/c_program/c_cpp_code/src/c/: deal_m.c  echo_m.c
tests/c_program/output/: deal_m_c.cir.mlir  deal_m_c_CHIPLET_DSE.mlir  test.cir.mlir  test.out.mlir
tests/ml_model/model/: multi_dnn_simple.py  pretrain.py
tests/ml_model/stablehlo/: lenet_STABLEHLO.mlir
tool_build/: chipletopt_build.sh
tools/: CMakeLists.txt
tools/chiplet-opt/: CMakeLists.txt  chiplet-opt.cpp
